Máquina implementada, a falta de pruebas debería leer el fichero y guardar la información en la máquina. siguiente paso pruebas de compilación y corrección de errores.